--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <li><a href="#" onclick="window.open('contact-us.html','_self')">Contact Us</a></li>
       </ul>
       <div class="right">
-        <button onclick="window.open('login.html','_self')" style="width: 150px;">Login</button>
-        <button onclick="window.open('signup.html','_self')"style="width: 150px;">Sign-up</button>
+        <button onclick="window.open('login.html','_self')">Login</button>
+        <button onclick="window.open('signup.html','_self')">Sign-up</button>
       </div>
       <div class="text-box">
         <h1>Welcome to our Fitness Tracker!!!</h1>
